tests/binding/pass/nested_local_var.crs
fn main() {
    {
        var a : i32 = 2;
        {
            {
                a;
            }
        }
    }
}