tests/binding/fail/unbound_var.crs
fn main() {
    var a = b;
}